kubernetes/apps/base/home/home/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  selector:
    app: homepage
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
