kubernetes/apps/base/home/home/homepage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: home
      sectionName: wildcard-keiretsu-top-https
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
      sectionName: wildcard-keiretsu-top-https
  hostnames:
    - "home.keiretsu.top"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: homepage
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
